tests/script_errors/lexer_bad_int/error.txt
Error: 
    1 | let f = 0snot
      |          ^ An unexpected character 's' was found